# coduck-backend

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
