[package]
name = "coduck-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "coduck-backend"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"] }
